--- a/option-1-hook/src/main/webapp/WEB-INF/web.xml
+++ b/option-1-hook/src/main/webapp/WEB-INF/web.xml
@@ -16,8 +16,9 @@ not, see <http://www.gnu.org/licenses/>.
 <web-app version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+
 	<listener>
-		<listener-class>au.com.permeance.liferay.demo.menufix.util.MenuHookListener</listener-class>
+		<listener-class>au.com.permeance.liferay.portal.documentlibrary.servlet.FolderActionsMenuHookListener</listener-class>
 	</listener>
 	
 	<!-- 
@@ -25,7 +26,7 @@ not, see <http://www.gnu.org/licenses/>.
 	 -->	
 	<servlet>
 		<servlet-name>Startup</servlet-name>
-		<servlet-class>au.com.permeance.liferay.demo.menufix.util.StartupServlet</servlet-class>
+		<servlet-class>au.com.permeance.liferay.portal.documentlibrary.servlet.StartupServlet</servlet-class>
 		<load-on-startup>0</load-on-startup>
 	</servlet>	
 </web-app>
