--- a/option-1-hook/src/main/webapp/WEB-INF/web.xml
+++ b/option-1-hook/src/main/webapp/WEB-INF/web.xml
@@ -25,7 +25,7 @@ not, see <http://www.gnu.org/licenses/>.
 	see StartupServlet comments on why this is being used.
 	 -->	
 	<servlet>
-		<servlet-name>Startup</servlet-name>
+		<servlet-name>Startup Servlet</servlet-name>
 		<servlet-class>au.com.permeance.liferay.portal.documentlibrary.servlet.StartupServlet</servlet-class>
 		<load-on-startup>0</load-on-startup>
 	</servlet>	
